--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AUTH_SECRET='61aec7e6f858c85b17b6617906ef9fe6'
-ADMIN_EMAIL='mark.r.musil@gmail.com'
-ADMIN_PASSWORD='pass1234'
+AUTH_SECRET=61aec7e6f858c85b17b6617906ef9fe6
+ADMIN_EMAIL=mark.r.musil@gmail.com
+ADMIN_PASSWORD=pass1234
